--- a/welcome.css
+++ b/welcome.css
@@ -1,69 +1,72 @@
 #container {
-    display: none;
+  display: none;
 }
 
 #welcome-screen {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 50px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    z-index: 9999;
+  background-color: #333;
+  color: #fff;
+  text-align: center;
+  padding: 50px;
+  position: center;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+h2 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.animation-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle {
+  width: 20px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+  margin: 0 10px;
+  animation: bounce 1s ease-in-out infinite;
+}
+
+@keyframes bounce {
+  0%,
+  20%,
+  50%,
+  80%,
+  100% {
+    transform: translateY(0);
   }
-  
-  h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
+  40% {
+    transform: translateY(-20px);
   }
-  
-  .animation-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  60% {
+    transform: translateY(-10px);
   }
-  
-  .circle {
-    width: 20px;
-    height: 20px;
-    background-color: #fff;
-    border-radius: 50%;
-    margin: 0 10px;
-    animation: bounce 1s ease-in-out infinite;
-  }
-  
-  @keyframes bounce {
-    0%, 20%, 50%, 80%, 100% {
-      transform: translateY(0);
-    }
-    40% {
-      transform: translateY(-20px);
-    }
-    60% {
-      transform: translateY(-10px);
-    }
-  }
+}
 
 .custom-button {
-    background-color: #007BFF; 
-    color: #fff; 
-    border: none;
-    border-radius: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
-    margin-top: 20px;
-  }
-  
-  .custom-button:hover {
-    background-color: #0056b3; 
-  }
-  
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-top: 20px;
+}
+
+.custom-button:hover {
+  background-color: #0056b3;
+}
